--- a/TaskManager/Views/Users/Details.cshtml
+++ b/TaskManager/Views/Users/Details.cshtml
@@ -1,39 +1,26 @@
 ﻿@model UserModel
 
 @{
-    ViewData["Title"] = "Add a new user";
+    ViewData["Title"] = "Details";
 }
 
-<div class="row text">
-    <div class="col-md-8 offset-2">
-        <p>
-            <h1>Details for @Model.FullName</h1>
-        </p>
-        <div class="row text">
-            <div class="col-md-8 offset-2">
+<div class="row justify-content-center detail-form">
+    <div class="col-xl-8 col-lg-10 form-layout">
+        @if (Model is not null)
+        {
+            <div class="row task-detail-row">
+                <div class="col-11 task-detail">
+                    <div class="task-detail-text">
+                        <div>Full name: @Model.FullName</div>
+                        <div>Email address: @Model.EmailAddress</div>
+                        <div class="fw-bold mb-2 task-detail-task">Category: @Model.Category.CategoryName</div>
 
-                    <div class="form-group">
-                        <label asp-for="EmailAddress" class="control-label"></label>
-                        <input asp-for="EmailAddress" class="form-control" readonly/>
-                        <span asp-validation-for="EmailAddress" class="text-danger"></span>
+                        <div>
+                            <a class="btn btn-main text-uppercase" asp-action="Index">Show all</a>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label asp-for="FullName" class="control-label"></label>
-                        <input asp-for="FullName" class="form-control" readonly/>
-                        <span asp-validation-for="FullName" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Category" class="control-label"></label>
-                        <input asp-for="Category" class="form-control" readonly/>
-                        <span asp-validation-for="Category" class="text-danger"></span>
-                    </div>
-
-                    <div class="form-group">
-                        <a class="btn btn-outline-success float-right" asp-action="Edit" asp-route-id="@Model.EmailAddress">Edit</a>
-                        <a class="btn btn-outline-secondary" asp-action="Index">Show all</a>
-                    </div>
-
+                </div>
             </div>
-        </div>
+        }
     </div>
 </div>
