--- a/TaskManager/Views/Users/Details.cshtml
+++ b/TaskManager/Views/Users/Details.cshtml
@@ -15,9 +15,15 @@
                         <div>Email address: @Model.EmailAddress</div>
                         <div class="fw-bold mb-2 task-detail-task">Category: @Model.Category.CategoryName</div>
 
-                        <div>
-                            <a class="btn btn-main text-uppercase" asp-action="Index">Show all</a>
-                        </div>
+                        @if (ViewBag.Task != null)
+                        {
+                            <div>Creation date: ViewBag.Task.CreatedDate.ToLocalTime().ToString("HH:mm dd.MM.yyyy")</div>
+                            <div>Finish date: ViewBag.Task.FinishDate.ToLocalTime().ToString("HH:mm dd.MM.yyyy")</div>
+                            <div class="fw-bold mb-2 task-detail-task">Task: ViewBag.Task.TaskName</div>
+                            <div class="mb-2 task-detail-author">Author: ViewBag.Task.Author.FullName - ViewBag.Task.Author.EmailAddress</div>
+                            <div class="mb-2">Viewbag.Task.Description</div>
+                        }
+                        <a class="btn btn-main text-uppercase" asp-action="Index">Show all</a>
                     </div>
                 </div>
             </div>
