--- a/TaskManager/Views/Tasks/Edit.cshtml
+++ b/TaskManager/Views/Tasks/Edit.cshtml
@@ -7,7 +7,7 @@
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h1>Add a new task</h1>
+            <h1>Edit task</h1>
         </p>
         <div class="row text">
             <div class="col-md-8 offset-2">
