--- a/TaskManager/Views/Users/Edit.cshtml
+++ b/TaskManager/Views/Users/Edit.cshtml
@@ -1,13 +1,13 @@
 ﻿@model TaskManager.ViewModels.UserViewModel
 
 @{
-    ViewData["Title"] = "Update user";
+    ViewData["Title"] = "Редактировать информацию";
 }
 
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h1>Add a new task</h1>
+            <h1>Редактировать профиль</h1>
         </p>
         <div class="row text">
             <div class="col-md-8 offset-2">
@@ -15,7 +15,7 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="form-group">
-                        Editing: @Model.EmailAddress
+                        <p>Вы редактируете: @Model.EmailAddress</p>
                     </div>
                     <div class="form-group">
                         <label asp-for="FullName" class="control-label"></label>
@@ -26,12 +26,10 @@
                         @Html.DropDownListFor(m => m.Category, ViewBag.Categories as SelectList)
                         <span asp-validation-for="Category" class="text-danger"></span>
                     </div>
-                    
                     <div class="form-group">
                         <input type="submit" asp-action="Edit" value="Edit" class="btn btn-outline-success float-right"/>
-                        <a class="btn btn-outline-secondary" asp-action="Index">Show all</a>
+                        <a class="btn btn-outline-secondary" asp-action="Index" asp-route-id="@Model.EmailAddress">Show all</a>
                     </div>
-
                 </form>
             </div>
         </div>
