--- a/TaskManager/Views/Users/Index.cshtml
+++ b/TaskManager/Views/Users/Index.cshtml
@@ -29,8 +29,9 @@
                             @Html.DisplayFor(modelItem => item.Category.CategoryName)
                         </td>
                         <td class="align-middle">
-                            <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.EmailAddress"><i class="bi bi-eye"></i>Details </a>
-                            <a class="btn btn-outline-danger" asp-action="DeleteConfirm" asp-route-id="@item.EmailAddress"><i class="bi bi-trash"></i>Delete </a>
+                            <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.EmailAddress">Details </a>
+                            <a class="btn btn-outline-info" asp-action="Edit" asp-route-id="@item.EmailAddress">Edit </a>
+                            <a class="btn btn-outline-danger" asp-action="DeleteConfirm" asp-route-id="@item.EmailAddress">Delete </a>
                         </td>
                     </tr>
                 }
