--- a/TaskManager/Views/Workspaces/Index.cshtml
+++ b/TaskManager/Views/Workspaces/Index.cshtml
@@ -20,7 +20,8 @@
                             @Html.DisplayFor(modelItem => item.WorkspaceName)
                         </td>
                         <td class="align-middle">
-                            <a class="btn btn-outline-primary" asp-controller="Tasks" asp-action="Index" asp-route-workspace="@item.Id"><i class="bi bi-pencil-square"></i>Open</a>
+                            <a class="btn btn-outline-primary" asp-controller="Tasks" asp-action="Index" asp-route-workspace="@item.Id">Open</a>
+                            <a class="btn btn-outline-danger" asp-action="DeleteConfirm" asp-route-id="@item.Id">Delete </a>
                         </td>
                     </tr>
                 }
