database and some service changes

--- a/TaskManager/Views/Tasks/Details.cshtml
+++ b/TaskManager/Views/Tasks/Details.cshtml
@@ -47,6 +47,7 @@
                                 <a class="btn btn-main text-uppercase" asp-route-id="@Model.Id" asp-action="Delete">Delete task</a>
                                 <a class="btn btn-main text-uppercase" asp-route-id="@Model.Id" asp-action="Edit">Edit task</a>
                                 <a class="btn btn-main text-uppercase" asp-route-id="@Model.Id" asp-action="AppointUsers">Appoint users</a>
+                                <a class="btn btn-main text-uppercase" asp-action="Index">Show all</a>
                             </div>
                         }
                     </div>
