--- a/TaskManager/Views/Shared/_Layout.cshtml
+++ b/TaskManager/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Users" asp-action="Index">TaskManager</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Workspaces" asp-action="Index">TaskManager</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,18 +25,21 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button" data-toggle="button"
                                 aria-haspopup="true" aria-expanded="false">
-                                    <i class="bi bi-gear"></i> Management
+                                    <i class="bi bi-gear"></i> Менеджмент
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="">
-                                    <a class="dropdown-item" asp-controller="Users" asp-action="Index">Users</a>
-                                    <a class="dropdown-item" asp-controller="Workspaces" asp-action="Index">Workspaces</a>
+                                    <a class="dropdown-item" asp-controller="Users" asp-action="Index">Пользователи</a>
+                                    <a class="dropdown-item" asp-controller="Workspaces" asp-action="Index">Рабочие пространства</a>
                                 </div>
                             </li>
                             <li>
-                                <a class="nav-link text-dark" asp-controller="Users" asp-route-id="@User.Identity.Name" asp-action="Profile">Profile</a>
+                                <a class="nav-link text-dark" asp-controller="Users" asp-route-id="@User.Identity.Name" asp-action="Profile">Профиль</a>
                             </li>
                             <li>
-                                <a class="nav-link text-dark" asp-controller="Users" asp-action="Logout">Logout</a>
+                                <a class="nav-link text-dark" asp-controller="Notifications" asp-action="Index">Оповещения</a>
+                            </li>
+                            <li>
+                                <a class="nav-link text-dark" asp-controller="Users" asp-action="Logout">Выйти</a>
                             </li>
                         }
                     </ul>
