--- a/TaskManager/Views/Workspaces/InviteUsers.cshtml
+++ b/TaskManager/Views/Workspaces/InviteUsers.cshtml
@@ -19,7 +19,7 @@
             @Html.ActionLink($"{category.CategoryName}", "InviteUsers", new{categoryId = category.Id})
         }
     </div>
-    @if (Model != null)
+    @if (Model?.Count() > 0)
     {
         <div class="col-md-8 offset-md-2">
             <table class="table">
