--- a/TaskManager/Views/Users/LogIn.cshtml
+++ b/TaskManager/Views/Users/LogIn.cshtml
@@ -1,37 +1,29 @@
 ﻿@model TaskManager.ViewModels.LogInViewModel
 
 @{
-    ViewData["Title"] = "Log In";
+    ViewData["Title"] = "Войти";
 }
 
-<div class="row text">
-    <div class="col-md-8 offset-2">
-        <p>
-            <h1>Log In</h1>
-        </p>
-        <div class="row text">
-            <div class="col-md-8 offset-2">
+<h1 class="page-heading mb-4">Осуществить вход</h1>
+<div class="row justify-content-center create-form">
+    <div class="col-xl-8 col-lg-10 form-layout">
+        <form asp-action="LogIn">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                <form asp-action="LogIn">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-                    <div class="form-group">
-                        <label asp-for="EmailAddress" class="control-label"></label>
-                        <input asp-for="EmailAddress" class="form-control"/>
-                        <span asp-validation-for="EmailAddress" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Password" class="control-label"></label>
-                        <input asp-for="Password" class="form-control"/>
-                        <span asp-validation-for="Password" class="text-danger"></span>
-                    </div>
-
-                    <div class="form-group">
-                        <input type="submit" value="LogIn" class="btn btn-outline-success float-right"/>
-                    </div>
-                </form>
- 
+            <div class="input-section">
+                <span asp-validation-for="EmailAddress" class="span-danger fw-bold text-uppercase"></span>
+                <label asp-for="EmailAddress" class="input-description"></label>
+                <input asp-for="EmailAddress" class="form-control"/>
             </div>
-        </div>
+            <div class="input-section">
+                <span asp-validation-for="Password" class="span-danger fw-bold text-uppercase"></span>
+                <label asp-for="Password" class="input-description"></label>
+                <input asp-for="Password" class="form-control"/>
+            </div>
+
+            <div class="center-children">
+                <button class="btn btn-main btn-lg text-uppercase" type="submit">Войти</button>
+            </div>
+        </form>
     </div>
 </div>
