--- a/TaskManager/Views/Shared/_Layout.cshtml
+++ b/TaskManager/Views/Shared/_Layout.cshtml
@@ -10,54 +10,43 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Workspaces" asp-action="Index">TaskManager</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        @if (User.Identity.IsAuthenticated)
+
+    <div class="page">
+        <main class="container-xxl">
+
+            <div class="px-5 pt-3 nav-links">
+                <a class="logo-link login-link" asp-area="" asp-controller="Workspaces" asp-action="Index">TaskManager</a>
+                <div class="nav-section">
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        @if (User.IsInRole("Manager"))
                         {
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button" data-toggle="button"
+                            <a class="login-link dropdown-toggle" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button" data-toggle="button"
                                 aria-haspopup="true" aria-expanded="false">
-                                    <i class="bi bi-gear"></i> Менеджмент
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="">
-                                    <a class="dropdown-item" asp-controller="Users" asp-action="Index">Пользователи</a>
-                                    <a class="dropdown-item" asp-controller="Workspaces" asp-action="Index">Рабочие пространства</a>
-                                </div>
-                            </li>
-                            <li>
-                                <a class="nav-link text-dark" asp-controller="Users" asp-route-id="@User.Identity.Name" asp-action="Profile">Профиль</a>
-                            </li>
-                            <li>
-                                <a class="nav-link text-dark" asp-controller="Notifications" asp-action="Index">Оповещения</a>
-                            </li>
-                            <li>
-                                <a class="nav-link text-dark" asp-controller="Users" asp-action="Logout">Выйти</a>
-                            </li>
+                                Менеджмент
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="">
+                                <a class="dropdown-item" asp-controller="Users" asp-action="Index">Пользователи</a>
+                                <a class="dropdown-item" asp-controller="Workspaces" asp-action="Index">Рабочие пространства</a>
+                            </div>
                         }
-                    </ul>
+                        <a class="login-link" asp-controller="Users" asp-route-id="@User.Identity.Name" asp-action="Profile">Профиль</a>
+                        <a class="login-link" asp-controller="Notifications" asp-action="Index">Оповещения</a>
+                        <a class="login-link" asp-controller="Users" asp-action="Logout">Выйти</a>
+                    }
                 </div>
             </div>
-        </nav>
-    </header>
-    <div class="container-fluid">
-        <main role="main" class="pb-3">
-            @RenderBody()
+
+            <article class="content pt-1">
+                @RenderBody()
+            </article>
+
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - TaskManager
-        </div>
-    </footer>
+
+
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
