--- a/TaskManager/wwwroot/css/site.css
+++ b/TaskManager/wwwroot/css/site.css
@@ -1,18 +1,268 @@
-html {
-  font-size: 14px;
+@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;700;900&family=Roboto:wght@300;400;700;900&display=swap');
+
+html, body {
+    background: #a8c6f7;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+.page {
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+main {
+    flex: 1;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 900;
+    color: #1B6EC2;
 }
 
 body {
-  margin-bottom: 60px;
+    background-size: cover;
+    height: 100%;
+}
+
+.content {
+    padding-top: 1.1rem;
+}
+
+h1 {
+    padding-top: 1rem;
+}
+
+h1:focus {
+    outline: none;
+}
+
+a, .btn-link {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+a:hover, .btn-link:hover {
+    color: #FFFFFF;
+    text-decoration: underline;
+}
+
+.nav-links {
+    display: flex;
+    text-align: center;
+}
+
+.nav-section {
+    width: 80%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.login-link {
+    padding-left: 1rem;
+}
+
+.logo-link{
+    text-align: left;
+    width: 20%;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
+}
+
+.content {
+    padding-top: 1.1rem;
+}
+
+.page-heading {
+    text-align: center;
+}
+
+.form-layout {
+    background-color: #FFFFFF;
+    border-radius: 15px;
+    padding: 2rem;
+}
+
+.form-layout a {
+    font-weight: 700;
+    color: #1B6EC2;
+}
+
+.form-layout a:hover {
+    text-decoration: underline;
+}
+
+.btn:focus,
+.form-control:focus {
+    box-shadow: none;
+}
+
+.btn-order {
+    background-color: #FFFFFF;
+    border: 0px solid #DDDDDD;
+    border-radius: 10px;
+}
+
+.btn-main {
+    color: #FFFFFF;
+    background-color: #1B6EC2;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    font-family: 'Inconsolata', sans-serif;
+    font-weight: 900;
+    border-radius: 10px;
+    border-width: 3px;
+}
+
+.btn-main:hover {
+    color: #1B6EC2;
+    border-color: #1B6EC2;
+    background-color: #FFFFFF;
+    border-width: 3px;
+}
+
+.input-section {
+    margin-bottom: 2rem;
+}
+
+.input-description {
+    margin-bottom: 0.5rem;
+}
+
+.span-danger{
+    display: block;
+    color: red;
+}
+
+.center-children {
+    display: flex;
+    justify-content: center;
+}
+
+/*------------------------------   USERS/WORKSPACES   -------------------------------------*/
+.element-entry {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 20px;
+    margin: 10px 0;
+    padding: 20px;
+    background-color: #FFFFFF;
+    box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
+}
+
+.element-entry-text {
+    display: flex;
+    flex-grow: 1;
+}
+
+.element-entry-actions{
+    justify-content: flex-end;
+}
+
+.element-entry-action{
+
+}
+
+/*------------------------------   FILTERS   -------------------------------------*/
+.search{
+    display: flex;
+    flex-direction: column;
+}
+
+.search-box{
+    display: flex;
+    flex-direction: row;
+}
+
+.search-btn{
+    margin-left: 0;
+    width: 30px;
+}
+
+.filters {
+    margin: 1rem;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.filters a {
+    margin-top: 1rem;
+    color: black;
+    text-decoration: none;
+}
+
+.filters a:hover {
+    cursor: pointer;
+}
+
+/*------------------------------   TASKS   -------------------------------------*/
+
+.task-entry {
+    display: flex;
+    flex-direction: row;
+    border-radius: 20px;
+    margin: 20px 0;
+    box-shadow: rgba(0, 0, 0, 0.35) 0 5px 15px;
+}
+
+.task-entry-text {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    padding: 10px;
+    padding-left: 20px;
+    background-color: #FFFFFF;
+}
+
+.task-entry-text-title {
+    padding-top: 10px;
+    flex-grow: 1;
+}
+
+.task-entry-text-category {
+    text-transform: uppercase;
+    color: darkgrey;
+    font-family: 'Inconsolata', sans-serif;
+    font-weight: 700;
+    font-size: 0.8rem;
+    flex: 1;
+    display: flex;
+    align-items: flex-end;
+}
+
+.task-entry-status {
+    width: 50px;
+}
+
+.task-entry-status {
+    border-bottom-right-radius: 15px;
+    border-top-right-radius: 15px;
+    display: flex;
+    padding-top: 1rem;
+    padding-left: 0.2rem;
+    padding-bottom: 1rem;
+    padding-right: 1rem;
+}
+
+.task-entry-status-text {
+    text-transform: uppercase;
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+    color: #FFFFFF;
+    padding: 5px;
+    text-align: center;
+    line-height: 1.75;
+    font-weight: bold;
+    font-size: 0.8rem;
+    letter-spacing: 1.2px;
 }
